# CausalSensor4D

./: .gitignore  GITHUB_UPLOAD_LIST.md  LICENSE  LICENSE_NOTES.md  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
data/: README.md
examples/: real_like_tracks.csv  scene_lead_brake.json
examples/batch_csv_scenes/: scene_002_lead_brake_closer.csv  scene_003_cutin_candidate.csv  scene_004_cutin_close.csv  scene_005_pedestrian_crossing.csv  scene_006_pedestrian_crossing_close.csv
scripts/: run_example_batch.py  run_example_scene.py  setup_windows.ps1
src/causalsensor4d/: ad_model.py  av2_safety_filter.py  av2_scene_filter.py  baseline_comparison.py  bootstrap_ci.py  causal_graph.py  causal_hybrid_audit.py  clean_safe_ablation.py  clean_scene_miner.py  diagnosis.py  edits.py  failure_taxonomy.py  lead_brake_enhancement.py  lightweight_bc.py  llm_candidate_verification.py  llm_tools.py  llm_validation.py  llm_verified_benchmark.py  longitudinal_diagnostic.py  longitudinal_geometry.py  openrouter_client.py  planner.py  planner_comparison.py  report_metrics.py  risk.py  run_ad_model_comparison_csv.py  run_av2_clean_filter_and_run.py  run_av2_clean_mining_pipeline.py  run_av2_filter_and_run.py  run_av2_public_dataset.py  run_baseline_ablation_csv.py  run_batch_csv.py  run_bootstrap_ci.py  run_causal_hybrid_audit.py  run_clean_safe_baseline_ablation.py  run_csv_scene.py  run_failure_taxonomy.py  run_llm_ready_diagnosis.py  run_llm_validated_online.py  run_llm_verified_benchmark.py  (+10 more)
src/causalsensor4d/data_adapters/: __init__.py  argoverse2_scenario.py  (+2 more)
