[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalsensor4d"
version = "0.1.0"
description = "Clean safe-to-failure counterfactual testing for autonomous-driving scenes"
license = "MIT"
requires-python = ">=3.10"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "networkx>=3.0",
  "pydantic>=2.0",
  "pyarrow>=15.0.0",
  "tabulate>=0.9.0",
  "requests>=2.31.0"
]

[tool.setuptools.packages.find]
where = ["src"]
